<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="me.yurifariasg.MainActivity">
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:id="@+id/scrollView3">
        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:isScrollContainer="true"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:orientation="vertical">
        </LinearLayout>
    </ScrollView>


    <Button
        android:id="@+id/recording_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_recording"
        android:layout_below="@+id/scrollView3"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="17dp"
        android:layout_marginEnd="17dp"
        android:layout_marginTop="60dp" />

    <Spinner
        android:id="@+id/language_spinner"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/recording_bt"
        android:layout_toLeftOf="@+id/recording_bt"
        android:layout_toStartOf="@+id/recording_bt"
        android:layout_marginRight="14dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="10dp" />

    <Button
        android:text="@string/start_playing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/play_bt"
        android:layout_marginRight="7dp"
        android:layout_marginEnd="7dp"
        android:layout_below="@+id/recording_bt"
        android:layout_alignRight="@+id/recording_bt"
        android:layout_alignEnd="@+id/recording_bt" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear_text"
        android:id="@+id/clear_text_bt"
        android:layout_below="@+id/language_spinner"
        android:layout_alignRight="@+id/language_spinner"
        android:layout_alignEnd="@+id/language_spinner" />

</RelativeLayout>
